cluster/apps/ai/librechat/rag-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat-rag-api
  labels:
    app: librechat-rag-api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: librechat-rag-api
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/skip-outbound-ports: "6379"
      labels:
        app: librechat-rag-api
    spec:
      serviceAccountName: librechat-rag-api
      containers:
        - name: rag-api
          image: harbor.rcrumana.xyz/proxy-ghcr/danny-avila/librechat-rag-api-dev-lite:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
